--- a/README.org
+++ b/README.org
@@ -335,6 +335,22 @@ This package has the following concepts:
 ** Some equations
 
 *** Newton
+A simple equation will be
+
+#+begin_src listex :env $$
+'(= (-mathbf F)
+    (m (-mathbf v)))
+#+end_src
+
+#+RESULTS:
+:results:
+$$\mathbf{F} = m \mathbf{v}$$
+:end:
+
+but of course you have all the power of =emacs-lisp= at your disposal,
+so you can get a little more creative with how you organize
+things:
+
 #+begin_src listex :lisp-label newton :env eq :exports both
 (let ((d '(-mathrm d))
       (F '(-mathbf F))
@@ -345,7 +361,7 @@ This package has the following concepts:
     `(= ,F
         ,(D p 't)
         (+ (,X ,(D 'm 't)
-                   ,p)
+                   ,v)
            (,X m
                ,(D v 't)))
         )))
@@ -354,7 +370,7 @@ This package has the following concepts:
 #+RESULTS:
 :results:
 \begin{equation}
-\mathbf{F} = \frac{\mathrm{d} \mathbf{p}}{\mathrm{d} t} = \frac{\mathrm{d} m}{\mathrm{d} t} \times \mathbf{p} + m \times \frac{\mathrm{d} \mathbf{v}}{\mathrm{d} t}
+\mathbf{F} = \frac{\mathrm{d} \mathbf{p}}{\mathrm{d} t} = \frac{\mathrm{d} m}{\mathrm{d} t} \times \mathbf{v} + m \times \frac{\mathrm{d} \mathbf{v}}{\mathrm{d} t}
 \end{equation}
 :end:
 
@@ -458,11 +474,13 @@ whole latex documents using s-expressions.
 
 ** A matrix macro
 
-#+begin_src listex :env $$
+This is a simple but useful macro defined in the macro section:
+
+#+begin_src listex :env $$ :lisp-label weird-matrix
 '(matrix 2 3
          (-hat A) B (-dot E)
          (-tilde (-hat C)) D (_ E (matrix 2 2
-                                          1 2
+                                          1 (^ (-hat /phi) /dagger)
                                           3 4)))
 #+end_src
 
@@ -470,10 +488,34 @@ whole latex documents using s-expressions.
 :results:
 $$\begin{pmatrix}
 \hat{A} & B & \dot{E} \\ \tilde{\hat{C}} & D & E_{\begin{pmatrix}
-1 & 2 \\ 3 & 4 \\
+1 & \hat{\phi}^{\dagger} \\ 3 & 4 \\
 \end{pmatrix}} \\
 \end{pmatrix}$$
 :end:
+
+And now imagine we want to find the \( \phi \)
+and replace it with a \( \color{red}\psi \), well we can do it quite easily
+since we defined a lisp reference for the above matrix called
+=weird-matrix= and we can use the emacs lisp function =subst=
+to find and replace in the sexp tree:
+
+#+begin_src listex :env $$
+(subst '(-textcolor red /psi)
+       '/phi
+       weird-matrix)
+#+end_src
+
+#+RESULTS:
+:results:
+$$\begin{pmatrix}
+\hat{A} & B & \dot{E} \\ \tilde{\hat{C}} & D & E_{\begin{pmatrix}
+1 & \hat{\textcolor{red}{\psi}}^{\dagger} \\ 3 & 4 \\
+\end{pmatrix}} \\
+\end{pmatrix}$$
+:end:
+
+That's not bad at all.
+
 
 ** TODO Newcmdlet
 
