Add lt-macrolet macro and expander

--- a/README.org
+++ b/README.org
@@ -142,11 +142,63 @@ This package has the following concepts:
   (eval `(concat ,@(cl-loop for i from 1 to len collect " "))))
 #+end_src
 
+* Types
+
+
+#+begin_src emacs-lisp
+(cl-deftype listex:keyword ()
+  '(and symbol
+        (satisfies (lambda (k)
+                     (string-prefix-p listex-keyword-prefix
+                                      (format "%s" k))))))
+
+(cl-deftype listex:car-is-atom ()
+  '(satisfies (lambda (expr) (atom (car expr)))))
+
+(cl-deftype listex:command ()
+  '(and list
+        listex:car-is-atom
+        (satisfies (lambda (expr)
+                     (let ((name (format "%s" (car expr))))
+                       (string-prefix-p listex-command-prefix
+                                        name))))))
+
+(cl-deftype listex:operator ()
+  '(and list
+        listex:car-is-atom
+        (satisfies (lambda (expr)
+                     (let ((name (car expr)))
+                       (or (member name listex-operator-list)
+                           (string-prefix-p listex-operator-prefix
+                                            (format "%s" name))))))))
+
+(defmacro listex:macro-get-fun (name)
+  `(or (alist-get ,name listex-tex-macro--alist-user)
+       (alist-get ,name listex-tex-macro-alist)))
+
+
+(cl-deftype listex:macro ()
+  `(and list
+        listex:car-is-atom
+        (satisfies ,(lambda (expr) (listex:macro-get-fun (car expr))))))
+
+(defmacro listex:lisp-macro-get-fun (name)
+  `(alist-get ,name listex-lisp-macro-alist))
+
+(cl-deftype listex:lisp-macro ()
+  `(and list
+        listex:car-is-atom
+        (satisfies ,(lambda (expr) (listex:lisp-macro-get-fun (car expr))))))
+#+end_src
+
 * Macros definition
 
+** Implementation
 #+begin_src emacs-lisp
 (defvar listex-tex-macro-alist nil)
 (defvar listex-lisp-macro-alist nil)
+
+;; TODO: remove and use cl-letf
 ;; this is for the newcmdlet macro
 (defvar listex-tex-macro--alist-user nil)
 
@@ -154,14 +206,26 @@ This package has the following concepts:
   `(setf (alist-get ',key ,alist)
          ,(cl-etypecase fmt
             (function fmt)
-            (otherwise `(lambda (args)
-                         ,(if fmt
-                              `(format ,fmt ,@(cl-loop
-                                               for a in !args
-                                               collect `(listex:render-tex
-                                                         ,a)))
-                            `(listex:render-tex ,@!args)))))
-         ))
+            (string `(lambda (args)
+                       (format ,fmt
+                               ,@(cl-loop
+                                  for a in !args
+                                  collect `(listex:render-tex ,a))))))))
+
+(defmacro listex:lisp-macro-alist-pair (alist key list-or-fun)
+  `(list '(alist-get ',key ,alist)
+     ,(cl-etypecase list-or-fun
+        (function list-or-fun)
+        (list `(lambda (args)
+                 ,list-or-fun)))))
+
+(defmacro listex:defmacro (key list-or-fun)
+  `(let ((args (listex:lisp-macro-alist-pair listex-lisp-macro-alist
+                                             ,key
+                                             ,list-or-fun)))
+     (eval `(setf ,@args))))
+
+
 
 (defmacro listex:newcmd (key fmt &rest !args)
   `(listex:addcmd listex-tex-macro-alist
@@ -169,31 +233,41 @@ This package has the following concepts:
 
 (defmacro newcmdlet (ncmds &rest body)
   `(let (listex-tex-macro--alist-user)
-     ,@(loop for cmd in ncmds
+     ,@(cl-loop for cmd in ncmds
              collect
              `(listex:addcmd listex-tex-macro--alist-user
                              ,(car cmd) ,(cadr cmd)
                              ,@(cddr cmd)))
      ,@body))
 
+
+;; set indentation for lt-macrolet and newcmdlet correctly
+(progn
+  (put 'lt-macrolet 'lisp-indent-function 'defun)
+  (put 'newcmdlet 'lisp-indent-function 'defun))
+
+
+#+end_src
+
+** TeX macro definitions
+
+This package defines some macros by default for use in the src code and
+for ease of use for others.
+
+#+begin_src emacs-lisp
 ;; important macros
 (listex:newcmd braced "{%s}" args)
 (listex:newcmd progn "%s" args)
 
-
-
-
-
-
 ;; left right stuff
 (listex:newcmd lr "\\left%s%s\\right%s" (car args) (cddr args) (cadr args))
-(listex:newcmd lrp nil `(lr \( \) ,@args))
-(listex:newcmd lrs nil `(lr \[ \] ,@args))
-(listex:newcmd set nil `(lr /{ /} ,@args))
+(listex:defmacro lrp `(lr \( \) ,@args))
+(listex:defmacro lrs `(lr \[ \] ,@args))
+(listex:defmacro set `(lr /{ /} ,@args))
 
 ;; quantum mechanics
-(listex:newcmd <| nil `(lr /langle | ,@args))
-(listex:newcmd |> nil `(lr | /rangle ,@args))
+(listex:defmacro <| `(lr /langle | ,@args))
+(listex:defmacro |> `(lr | /rangle ,@args))
 
 ;; exponents
 (listex:newcmd ^ "%s^{%s}" (car args) (cdr args))
@@ -210,15 +284,16 @@ This package has the following concepts:
                (car args)
                (cdr args)
                (car args))
-(listex:newcmd mat nil `(env pmatrix ,@args))
+
+(listex:defmacro mat `(env pmatrix ,@args))
 
 ;; Math environments
-(listex:newcmd $ nil `(begend $ ,@args))
-(listex:newcmd $$ nil `(begend $$ ,@args))
-(listex:newcmd eq nil `(env equation ,@args))
-(listex:newcmd eq* nil `(env equation* ,@args))
-(listex:newcmd al nil `(env align ,@args))
-(listex:newcmd al* nil `(env align* ,@args))
+(listex:defmacro $ `(begend $ ,@args))
+(listex:defmacro $$ `(begend $$ ,@args))
+(listex:defmacro eq `(env equation ,@args))
+(listex:defmacro eq* `(env equation* ,@args))
+(listex:defmacro al `(env align ,@args))
+(listex:defmacro al* `(env align* ,@args))
 
 ;; force newlines in the output
 (listex:newcmd terpri "\n")
@@ -226,72 +301,32 @@ This package has the following concepts:
 (listex:newcmd nl "\n")
 
 ;; more convoluted example
-(listex:newcmd matrix
-               (lambda (args)
-                 (let ((rows (car args))
-                       (cols (cadr args))
-                       (elements (cddr args)))
-                   (cl-assert (eq (length elements) (* cols rows)))
-                   (listex:render-tex
-                    `(env pmatrix
-                          ,@(cl-loop for el in elements
-                                     with i = 0
-                                     with buff = nil
-                                     do (push el buff)
-                                     do (incf i)
-                                     if (eq (% i cols) 0)
-                                     do (push '\\\\ buff)
-                                     and collect (reverse buff)
-                                     and do (setf buff nil)
-                                     else
-                                     do (push '& buff)))))))
-#+end_src
-
-* Types
-
-
-#+begin_src emacs-lisp
-(cl-deftype listex:keyword ()
-  `(and symbol
-        (satisfies ,(lambda (k)
-                      (string-prefix-p listex-keyword-prefix
-                                       (format "%s" k))))))
-
-(cl-deftype listex:car-is-atom ()
-  '(satisfies (lambda (expr) (atom (car expr)))))
-
-(cl-deftype listex:command ()
-  `(and list
-        listex:car-is-atom
-        (satisfies ,(lambda (expr)
-                      (let ((name (format "%s" (car expr))))
-                        (string-prefix-p listex-command-prefix
-                                         name))))))
-
-(cl-deftype listex:operator ()
-  `(and list
-        listex:car-is-atom
-        (satisfies ,(lambda (expr)
-                      (let ((name (car expr)))
-                        (or (member name listex-operator-list)
-                            (string-prefix-p listex-operator-prefix
-                                             (format "%s" name))))))))
-
-(defmacro listex:macro-get-fun (name)
-  `(or (alist-get ,name listex-tex-macro--alist-user)
-       (alist-get ,name listex-tex-macro-alist)))
-
-(cl-deftype listex:macro ()
-  `(and list
-        listex:car-is-atom
-        (satisfies ,(lambda (expr) (listex:macro-get-fun (car expr))))))
+(listex:defmacro matrix
+                 (lambda (args)
+                   (let ((rows (car args))
+                         (cols (cadr args))
+                         (elements (cddr args)))
+                     (cl-assert (eq (length elements) (* cols rows)))
+                     `(env pmatrix
+                           ,@(cl-loop for el in elements
+                                      with i = 0
+                                      with buff = nil
+                                      do (push el buff)
+                                      do (incf i)
+                                      if (eq (% i cols) 0)
+                                      do (push '\\\\ buff)
+                                      and collect (reverse buff)
+                                      and do (setf buff nil)
+                                      else
+                                      do (push '& buff))))))
 #+end_src
 
 * Render
 #+begin_src emacs-lisp
 
 (defun listex:render-tex (expr)
-  "Render listex DSL into latex"
+  "Main function to convert a listex DSL s-expression
+   into a latex-compatible string."
   (cl-etypecase expr
     (listex:keyword (format "\\%s"
                             (string-remove-prefix listex-keyword-prefix
@@ -303,11 +338,8 @@ This package has the following concepts:
                           (cdr expr)))
             (name (format "\\%s" (string-remove-prefix listex-command-prefix
                                                       (symbol-name (car expr)))))
-            (args-strings (mapcar #'listex:render-tex args))
-            ;(braced-strings (mapcar #'listex:braced args-strings))
-            )
-       (concat name (string-join args-strings))
-       ))
+            (args-strings (mapcar #'listex:render-tex args)))
+       (concat name (string-join args-strings))))
     (listex:operator (let* ((name (car expr))
                             (namestr (symbol-name name))
                             (op (if (> (length namestr) 1)
@@ -320,12 +352,84 @@ This package has the following concepts:
                          (name (car expr))
                          (f (listex:macro-get-fun name)))
                     (funcall f args)))
+    (listex:lisp-macro (let* ((args (cdr expr))
+                              (name (car expr))
+                              (f (listex:lisp-macro-get-fun name))
+                              (new-expr (funcall f args)))
+                         (listex:render-tex new-expr)))
     (list (string-join (mapcar #'listex:render-tex expr) " "))
     (atom (format "%s" expr))))
+
+
+
 
 (defun listex (expr)
   (listex:render-tex expr))
 #+end_src
+
+* Macrolet
+
+In order to have a macrolet-like behaviour we need
+to have an expander of our lisp-like macros, i.e.
+of expressions of the type =listex:lisp-macro=
+that are defined by the =listex:defmacro= macro.
+
+However, since a lexical scope environment will be destroyed
+after the scope, we need to expand the forms inside the
+equation by the macros that have been defined.
+Thankfully this is not very difficult and is done
+in the =listex:expand-lisp-macro= function.
+
+#+begin_src emacs-lisp
+(defun listex:expand-lisp-macro (expr)
+  "This function should expand all listex:lisp-macro
+   s-expressions by the s-expression that they expand to,
+   so that in some cases you can just get the whole.
+
+   This works as it follows:
+
+   - if an expression is a lisp-macro,
+     then it will first expand its arguments
+     and then return the expansion of the parent
+     with the expansion of the arguments replaced.
+   - If an expression is a command, tex-macro
+     or an operator expression, then it will replace
+     the same expression just with the elements replaced
+     by their expansions.
+   - Otherwise, it should replace just the bare expression."
+  (cl-typecase expr
+    (listex:lisp-macro (let* ((args (mapcar #'listex:expand-lisp-macro
+                                            (cdr expr)))
+                              (name (car expr))
+                              (f (listex:lisp-macro-get-fun name)))
+                         (funcall f args)))
+    ;; expand the arguments
+    ((or listex:command
+         listex:operator
+         listex:macro) (let ((args (mapcar #'listex:expand-lisp-macro
+                                           (cdr expr)))
+                             (name (car expr)))
+         `(,name ,@args)))
+    (list (mapcar #'listex:expand-lisp-macro expr))
+    (otherwise expr)))
+#+end_src
+
+The =lt-macrolet= will expand the macros defined in the
+let body using =listex:expand-lisp-macro= so that they
+are portable outside of this environment and you do not need
+to define globally the macros and pollute the listex
+macro environment.
+
+#+begin_src emacs-lisp
+(defmacro lt-macrolet (bindings &rest body)
+  (let ((letf-args (cl-loop for b in bindings
+                            collect (eval `(listex:lisp-macro-alist-pair
+                                            listex-lisp-macro-alist
+                                            ,@b)))))
+    `(cl-letf (,@letf-args)
+       (listex:expand-lisp-macro (progn ,@body)))))
+#+end_src
+
 
 * Epilog                                                           :noexport:
 #+begin_src emacs-lisp
@@ -547,11 +651,13 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
 #+begin_src emacs-lisp
 (defmacro assert-type (type &rest elements)
   `(dolist (expr ',elements)
-     (cl-assert (cl-typep expr ',type) nil "%s is not of type %s" expr ',type)))
+     (cl-assert (cl-typep expr ',type)
+                nil "%s is not of type %s" expr ',type)))
 
 (defmacro assert-type! (type &rest elements)
   `(dolist (expr ',elements)
-     (cl-assert (not (cl-typep expr ',type)) nil "%s is not of type %s" expr ',type)))
+     (cl-assert (not (cl-typep expr ',type))
+                nil "%s is not of type %s" expr ',type)))
 
 ;; keyword
 (assert-type listex:keyword /int /sum /alpha)
@@ -572,8 +678,16 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
 
 ;; macro
 (assert-type listex:macro
+             (braced) (progn)
              (^) (^ A) (^ A B 2)
              (_) (_ A) (_ A B))
+
+;; newcmdlet simple test
+(newcmdlet ((not-a-tex-macro "not-a tex-macro"))
+  (assert-type listex:macro
+               (not-a-tex-macro)))
+(assert-type! listex:macro
+              (not-a-tex-macro))
 
 
 ;; rendering
@@ -591,6 +705,18 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
    ("\\frac{A}{5}" . (-frac A 5))
    ("A % B % C" . (% A B C))
    ("A^{2}" . (^ A 2))))
+
+;; lt-macrolet examples
+
+
+
+(lt-macrolet ((Σ `(_ (^ (/sum /limits) ,(car args)) ,(cadr args)))
+              (ω `(5 6))
+              (λ `(-frac (-mathrm ,(car args))
+                         (-mathbf ,(car args)))))
+  '(λ (+ (Σ (ω) (ω))
+         (lrp (ω)))))
+
 #+end_src
 
 #+RESULTS:
