--- a/README.org
+++ b/README.org
@@ -212,16 +212,17 @@ This package has the following concepts:
                                   for a in !args
                                   collect `(listex:render-tex ,a))))))))
 
-(defmacro listex:lisp-macro-alist-pair (alist key list-or-fun)
+(defmacro listex:lisp-macro-alist-pair (alist key args list-or-fun)
   `(list '(alist-get ',key ,alist)
      ,(cl-etypecase list-or-fun
         (function list-or-fun)
-        (list `(lambda (args)
+        (list `(lambda ,args
                  ,list-or-fun)))))
 
-(defmacro listex:defmacro (key list-or-fun)
+(defmacro listex:defmacro (key !args list-or-fun)
   `(let ((args (listex:lisp-macro-alist-pair listex-lisp-macro-alist
                                              ,key
+                                             ,!args
                                              ,list-or-fun)))
      (eval `(setf ,@args))))
 
@@ -244,6 +245,7 @@ This package has the following concepts:
 ;; set indentation for lt-macrolet and newcmdlet correctly
 (progn
   (put 'lt-macrolet 'lisp-indent-function 'defun)
+  (put 'lt-macrolet* 'lisp-indent-function 'defun)
   (put 'newcmdlet 'lisp-indent-function 'defun))
 
 
@@ -261,13 +263,13 @@ for ease of use for others.
 
 ;; left right stuff
 (listex:newcmd lr "\\left%s%s\\right%s" (car args) (cddr args) (cadr args))
-(listex:defmacro lrp `(lr \( \) ,@args))
-(listex:defmacro lrs `(lr \[ \] ,@args))
-(listex:defmacro set `(lr /{ /} ,@args))
+(listex:defmacro lrp (args) `(lr \( \) ,@args))
+(listex:defmacro lrs (args) `(lr \[ \] ,@args))
+(listex:defmacro set (args) `(lr /{ /} ,@args))
 
 ;; quantum mechanics
-(listex:defmacro <| `(lr /langle | ,@args))
-(listex:defmacro |> `(lr | /rangle ,@args))
+(listex:defmacro <| (args) `(lr /langle | ,@args))
+(listex:defmacro |> (args) `(lr | /rangle ,@args))
 
 ;; exponents
 (listex:newcmd ^ "%s^{%s}" (car args) (cdr args))
@@ -285,15 +287,15 @@ for ease of use for others.
                (cdr args)
                (car args))
 
-(listex:defmacro mat `(env pmatrix ,@args))
+(listex:defmacro mat (args) `(env pmatrix ,@args))
 
 ;; Math environments
-(listex:defmacro $ `(begend $ ,@args))
-(listex:defmacro $$ `(begend $$ ,@args))
-(listex:defmacro eq `(env equation ,@args))
-(listex:defmacro eq* `(env equation* ,@args))
-(listex:defmacro al `(env align ,@args))
-(listex:defmacro al* `(env align* ,@args))
+(listex:defmacro $ (args) `(begend $ ,@args))
+(listex:defmacro $$ (args) `(begend $$ ,@args))
+(listex:defmacro eq (args) `(env equation ,@args))
+(listex:defmacro eq* (args) `(env equation* ,@args))
+(listex:defmacro al (args) `(env align ,@args))
+(listex:defmacro al* (args) `(env align* ,@args))
 
 ;; force newlines in the output
 (listex:newcmd terpri "\n")
@@ -302,6 +304,7 @@ for ease of use for others.
 
 ;; more convoluted example
 (listex:defmacro matrix
+                 (args)
                  (lambda (args)
                    (let ((rows (car args))
                          (cols (cadr args))
@@ -355,7 +358,7 @@ for ease of use for others.
     (listex:lisp-macro (let* ((args (cdr expr))
                               (name (car expr))
                               (f (listex:lisp-macro-get-fun name))
-                              (new-expr (funcall f args)))
+                              (new-expr (apply f args)))
                          (listex:render-tex new-expr)))
     (list (string-join (mapcar #'listex:render-tex expr) " "))
     (atom (format "%s" expr))))
@@ -402,7 +405,7 @@ in the =listex:expand-lisp-macro= function.
                                             (cdr expr)))
                               (name (car expr))
                               (f (listex:lisp-macro-get-fun name)))
-                         (funcall f args)))
+                         (apply f args)))
     ;; expand the arguments
     ((or listex:command
          listex:operator
@@ -428,6 +431,14 @@ macro environment.
                                             ,@b)))))
     `(cl-letf (,@letf-args)
        (listex:expand-lisp-macro (progn ,@body)))))
+
+(defmacro lt-macrolet* (bindings &rest body)
+  (let ((init `(progn ,@body)))
+    (cl-loop for b in (reverse bindings)
+           with result = init
+           do (setq result `(lt-macrolet (,b) ,result))
+           finally
+           return result)))
 #+end_src
 
 
@@ -527,21 +538,38 @@ and we can try the same this time using
 =lt-macrolet=
 
 #+begin_src listex :env al*
-(lt-macrolet ((T '(-hat T))
-              (&+ `(%\\\\&+ ,@args))
-              (τ '(progn
-                    (/sum))))
-  '(%&= (T)
-        (&+ (τ 1)
-            (τ 2)
-            (τ 3)
-            (τ 4))))
+(labels ((ps (n) (seq-take '(a b c d e f g A B C D E F G) n))
+         (hs (n) (seq-take '(i j k l m n o I J K L M N O) n)))
+
+  (lt-macrolet* ((&+ (&rest args) `(%\\\\&+ ,@args))
+                 (t (up down) `(_ (^ t ,up) ,down))
+                 (^a (i) `(_ (-hat a) ,i))
+                 (^á (i) `(^ (^a ,i) /dagger))
+                 ;; holes and particles
+                 (áa (up down) `(,(cl-loop for p in up collect `(^á ,p))
+                                 ,(cl-loop for p in down collect `(^a ,p))))
+
+
+                 (Σ (&rest idx) `(_ (/sum /limits) ,@idx))
+
+                 (τ (n) (let ((pow (math-power-of-2 n))
+                              (abc (ps n))
+                              (ijk (reverse (hs n))))
+                          `(,(when (> n 1) `(-frac 1 ,pow))
+                            (Σ ,abc ,ijk)
+                            (t ,abc ,ijk)
+                            (áa ,abc ,ijk)))))
+
+    '(%&= (-hat T)
+          (&+ (τ 1)
+              (τ 2)))))
+
 #+end_src
 
 #+RESULTS:
 :results:
 \begin{align*}
-\hat{T} &= \sum \\&+ \sum \\&+ \sum \\&+ \sum
+\hat{T} &=  \sum \limits_{a i} t^{a}_{i} \hat{a}_{a}^{\dagger} \hat{a}_{i} \\&+ \frac{1}{4} \sum \limits_{a b j i} t^{a b}_{j i} \hat{a}_{a}^{\dagger} \hat{a}_{b}^{\dagger} \hat{a}_{j} \hat{a}_{i}
 \end{align*}
 :end:
 
@@ -714,7 +742,7 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
 (assert-type listex:lisp-macro
              (lrp))
 ;; lt-macrolet
-(lt-macrolet ((λ '(this and that)))
+(lt-macrolet ((λ () '(this and that)))
   (assert-type listex:lisp-macro
                (λ)))
 (assert-type! listex:lisp-macro
@@ -733,6 +761,7 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
  '(("int" . (int))
    ("pretty raw" . (pretty raw))
    ("int" . int)
+   ("% () strings work as in lisp %#" . "% () strings work as in lisp %#")
 
    ;; keywords
    ("\\int" . /int)
@@ -752,16 +781,17 @@ $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
    ("{raw}" . (braced raw))
    ("raw" . (progn raw))
    ("A^{2}" . (^ A 2))
+   ("A_{2}" . (_ A 2))
 
    ;; lisp macros
    ("\\left(\\i\\right)" . (lrp /i))))
 
 
 ;; lt-macrolet examples
-(lt-macrolet ((Σ `(_ (^ (/sum /limits) ,(car args)) ,(cadr args)))
-              (ω `(5 6))
-              (λ `(-frac (-mathrm ,(car args))
-                         (-mathbf ,(car args)))))
+(lt-macrolet ((Σ (up down) `(_ (^ (/sum /limits) ,up) ,down))
+              (ω () `(5 6))
+              (λ (a) `(-frac (-mathrm ,a)
+                             (-mathbf ,a))))
   '(λ (+ (Σ (ω) (ω))
          (lrp (ω)))))
 
