Fix most macros

--- a/README.org
+++ b/README.org
@@ -263,13 +263,13 @@ for ease of use for others.
 
 ;; left right stuff
 (listex:newcmd lr "\\left%s%s\\right%s" (car args) (cddr args) (cadr args))
-(listex:defmacro lrp (args) `(lr \( \) ,@args))
-(listex:defmacro lrs (args) `(lr \[ \] ,@args))
-(listex:defmacro set (args) `(lr /{ /} ,@args))
+(listex:defmacro lrp (&rest args) `(lr \( \) ,@args))
+(listex:defmacro lrs (&rest args) `(lr \[ \] ,@args))
+(listex:defmacro set (&rest args) `(lr /{ /} ,@args))
 
 ;; quantum mechanics
-(listex:defmacro <| (args) `(lr /langle | ,@args))
-(listex:defmacro |> (args) `(lr | /rangle ,@args))
+(listex:defmacro <| (&rest args) `(lr /langle | ,@args))
+(listex:defmacro |> (&rest args) `(lr | /rangle ,@args))
 
 ;; exponents
 (listex:newcmd ^ "%s^{%s}" (car args) (cdr args))
@@ -287,15 +287,15 @@ for ease of use for others.
                (cdr args)
                (car args))
 
-(listex:defmacro mat (args) `(env pmatrix ,@args))
+(listex:defmacro mat (&rest args) `(env pmatrix ,@args))
 
 ;; Math environments
-(listex:defmacro $ (args) `(begend $ ,@args))
-(listex:defmacro $$ (args) `(begend $$ ,@args))
-(listex:defmacro eq (args) `(env equation ,@args))
-(listex:defmacro eq* (args) `(env equation* ,@args))
-(listex:defmacro al (args) `(env align ,@args))
-(listex:defmacro al* (args) `(env align* ,@args))
+(listex:defmacro $ (&rest args) `(begend $ ,@args))
+(listex:defmacro $$ (&rest args) `(begend $$ ,@args))
+(listex:defmacro eq (&rest args) `(env equation ,@args))
+(listex:defmacro eq* (&rest args) `(env equation* ,@args))
+(listex:defmacro al (&rest args) `(env align ,@args))
+(listex:defmacro al* (&rest args) `(env align* ,@args))
 
 ;; force newlines in the output
 (listex:newcmd terpri "\n")
@@ -304,33 +304,36 @@ for ease of use for others.
 
 ;; more convoluted example
 (listex:defmacro matrix
-                 (args)
-                 (lambda (args)
-                   (let ((rows (car args))
-                         (cols (cadr args))
-                         (elements (cddr args)))
-                     (cl-assert (eq (length elements) (* cols rows)))
-                     `(env pmatrix
-                           ,@(cl-loop for el in elements
-                                      with i = 0
-                                      with buff = nil
-                                      do (push el buff)
-                                      do (incf i)
-                                      if (eq (% i cols) 0)
-                                      do (push '\\\\ buff)
-                                      and collect (reverse buff)
-                                      and do (setf buff nil)
-                                      else
-                                      do (push '& buff))))))
+                 (rows cols &rest elements)
+                 (progn
+                   (cl-assert (eq (length elements) (* cols rows)))
+                   `(env pmatrix
+                         ,@(cl-loop for el in elements
+                                    with i = 0
+                                    with buff = nil
+                                    do (push el buff)
+                                    do (incf i)
+                                    if (eq (% i cols) 0)
+                                    do (push '\\\\ buff)
+                                    and collect (reverse buff)
+                                    and do (setf buff nil)
+                                    else
+                                    do (push '& buff)))))
 #+end_src
 
 * Render
+** Implementation
 #+begin_src emacs-lisp
 
 (defun listex:render-tex (expr)
   "Main function to convert a listex DSL s-expression
    into a latex-compatible string."
   (cl-etypecase expr
+    (listex:lisp-macro (let* ((args (cdr expr))
+                              (name (car expr))
+                              (f (listex:lisp-macro-get-fun name))
+                              (new-expr (apply f args)))
+                         (listex:render-tex new-expr)))
     (listex:keyword (format "\\%s"
                             (string-remove-prefix listex-keyword-prefix
                                                   (symbol-name expr))))
@@ -340,7 +343,7 @@ for ease of use for others.
                                         (otherwise `(braced ,e))))
                           (cdr expr)))
             (name (format "\\%s" (string-remove-prefix listex-command-prefix
-                                                      (symbol-name (car expr)))))
+                                                       (symbol-name (car expr)))))
             (args-strings (mapcar #'listex:render-tex args)))
        (concat name (string-join args-strings))))
     (listex:operator (let* ((name (car expr))
@@ -349,17 +352,12 @@ for ease of use for others.
                                     (string-remove-prefix listex-operator-prefix
                                                           namestr)
                                   namestr)))
-                      (string-join (mapcar #'listex:render-tex (cdr expr))
-                                   (format " %s " op))))
+                       (string-join (mapcar #'listex:render-tex (cdr expr))
+                                    (format " %s " op))))
     (listex:macro (let* ((args (cdr expr))
                          (name (car expr))
                          (f (listex:macro-get-fun name)))
                     (funcall f args)))
-    (listex:lisp-macro (let* ((args (cdr expr))
-                              (name (car expr))
-                              (f (listex:lisp-macro-get-fun name))
-                              (new-expr (apply f args)))
-                         (listex:render-tex new-expr)))
     (list (string-join (mapcar #'listex:render-tex expr) " "))
     (atom (format "%s" expr))))
 
@@ -691,6 +689,61 @@ to have to call =listex= before the command.
 #+RESULTS:
 :results:
 $$\frac{5 5^{5 5^{5 5}}}{\varphi}$$
+:end:
+
+** Schwarzschild's paper
+
+This is a partial implementation of
+[[https://de.wikisource.org/wiki/%C3%9Cber_das_Gravitationsfeld_eines_Massenpunktes_nach_der_Einsteinschen_Theorie][Schwarzschild's paper]] as a testcase for a paper.
+
+#+begin_src listex
+(lt-macrolet ((lisp (&rest args) (eval `(progn ,@args)))
+              (main (&rest args) `(env document ,@args))
+              (text (&rest args) (s-word-wrap 80 (listex args)))
+              (code (&rest args) `(-texttt ,@args))
+              (* (&rest title) `("\\section{" ,@title "}" "\n\n"))
+              (** (&rest title) `("\\subsection{" ,@title "}" "\n\n"))
+              (*** (&rest title) `("\\ssubsection{" ,@title "}" "\n\n"))
+
+              (gμν () '(_ g /mu /nu))
+              (d! (var) `(progn (-mathrm d) ,var)))
+  '(main
+    (* Über das Gravitationsfeld eines Massenpunktes nach der
+       Einsteinschen Theorie.)
+
+    (text "Hr. Einstein hat in seiner Arbeit über die Perihelbewegung des
+           Merkur (s. Sitzungsberichte vom 18. November 1915) folgendes
+           Problem gestellt:"
+
+           Ein Punkt bewege sich gemäß der Forderung
+
+           (eq (-label eq:main-metric-definition)
+               (lr /{ \.
+                   (env matrix
+                        (/delta /int (d! s))
+                        \\\\
+                        \\\\
+                        (= (d! s)
+                           (-sqrt (/sum (gμν)
+                                        (d! (_ x /mu))
+                                        (d! (_ x /nu)))))))))
+    )
+  )
+
+#+end_src
+
+#+RESULTS:
+:results:
+\begin{document}
+\section{ Über das Gravitationsfeld eines Massenpunktes nach der Einsteinschen Theorie. } 
+
+ Hr. Einstein hat in seiner Arbeit über die Perihelbewegung des Merkur
+           (s. Sitzungsberichte vom 18. November 1915) folgendes Problem
+           gestellt: Ein Punkt bewege sich gemäß der Forderung \begin{equation}
+           \label{eq:main-metric-definition} \left\{\begin{matrix} \delta \int
+           \mathrm{d} s \\ \\ \mathrm{d} s = \sqrt{\sum g_{\mu \nu} \mathrm{d}
+           x_{\mu} \mathrm{d} x_{\nu}} \end{matrix}\right.  \end{equation}
+\end{document}
 :end:
 
 * Tests                                                            :noexport:
